# humble_orm_macro

./: Cargo.toml
src/: lib.rs
src/tests/: mod.rs  test_default_impl.rs  test_manycols.rs  test_model_fields.rs  test_pk_methods.rs
